# SAMe

./: .dockerignore  .env.docker  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  README_MAIN.md  alembic.ini  analis_dataset.ipynb  analog_search_processor.py  csv_to_excel_converter.py  data_processor.py  demo_fixed_processing.py  docker-compose.yml  emergency_search.py  generate_full_search_trees.py  generate_multiprocess_search_trees.py  generate_optimized_search_trees.py  generate_search_trees.py  large_dataset_processor.py  lists_and_parameters.json  main.py  main_proccesed.py  main_searh.py  parallel_dbscan_processor.py  process_full_dataset.py  pyproject.toml  pytest.ini  quick_process_to_excel.py  quick_test_final_name.py  run_app.py  run_tests.py  view_results.py
.config/: .markdownlint.json  .yamllint.yml
.github/workflows/: ci.yml
backend/app/: __init__.py  router_main.py
backend/app/configuration/: __init__.py  lifespan.py  server.py
benchmarks/: performance_benchmark.py
config/: .env.example  same_config.yaml
core/: __init__.py
core/data_manager/: __init__.py
core/database/: __init__.py
core/database/models/: __init__.py  main_models.py  process_models.py
core/settings/: config.py
core/utils/: __init__.py
docker/: .dockerignore  Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
docker/docs/: Dockerfile
docs/: ARCHITECTURE.md  INSTALLATION.md  MIGRATION_GUIDE.md  NOTEBOOK_GUIDE.md  USER_GUIDE.md  advanced_search_methods.md  index.md  mkdocs.yml
docs/docs/: API_REFERENCE.md  INSTALLATION.md  NOTEBOOK_GUIDE.md  USER_GUIDE.md  index.md
docs/docs/dev-guide/: architecture.md
docs/stylesheets/: extra.css
examples/: advanced_search_examples.py  token_processing_demo.py
frontend/same-frontend/: .dockerignore  .env.production  Dockerfile  Dockerfile.dev  nginx.conf  package-lock.json  package.json
frontend/same-frontend/src/: App.tsx  i18n.tsx  setupTests.ts
models/: ml_parameter_classifier.joblib
monitoring/: filebeat.yml
nginx/: nginx.conf
notebooks/: advanced_search_methods_demo.ipynb  quick_test_demo.ipynb  token_embeddings.npy  vocabulary.json
notebooks/analysis/: analysis_result.ipynb  clear_text.ipynb  dataset_procces.ipynb  main_dataset_analysis.ipynb  main_dataset_analysis.ipynb.backup  product_analog.py  product_analog_search.ipynb  product_names_processing.ipynb  product_names_processing.ipynb.backup  t_test_analog.py  train_classes.ipynb  train_parser.ipynb
notebooks/demo/: Cell output 21 [DW].csv  SAMe_Demo.ipynb  SAMe_Demo_New_Architecture.ipynb  SAMe_Demo_New_Architecture.ipynb.backup  SAMe_Demo_Simple.ipynb  analis_dataset.ipynb  class_data.ipynb  searh_engine.ipynb
notebooks/production/: analog_search_production.ipynb
scripts/: architecture_review.py  check_structure.py  init-db.sql  migrate_notebooks.py  migrate_tests.py  pre-commit-check.sh  quick-start.sh  setup-dev.sh  start-docker.sh
src/: __init__.py
src/data_manager/: DataManager.py  __init__.py
src/models/: model_config.json
src/same/: __init__.py  analog_search_engine.py  excel_processor.py
src/same/alembic/: env.py
src/same/api/: __init__.py  create_app.py  router_main.py  websocket.py
src/same/caching/: advanced_cache.py
src/same/categorization/: __init__.py  catalog_integration.py  category_classifier.py
src/same/data_manager/: DataManager.py  __init__.py
src/same/database/: __init__.py  base.py  engine.py
src/same/distributed/: processor.py
src/same/export/: __init__.py  excel_exporter.py  report_generator.py
src/same/models/: __init__.py  exceptions.py  memory_monitor.py  model_manager.py
src/same/optimizations/: integration.py  phase3_integration.py
src/same/parameter_extraction/: __init__.py  ml_extractor.py  parameter_parser.py  regex_extractor.py
src/same/realtime/: streaming.py
src/same/search_engine/: __init__.py  fuzzy_search.py  hybrid_search.py  indexer.py  semantic_search.py
src/same/settings/: __init__.py  config.py
src/same/text_processing/: __init__.py  (+4 more)
src/same_api/: __init__.py  setup.py
src/same_clear/: README.md  __init__.py  setup.py
src/same_core/: README.md  __init__.py  exceptions.py  integration.py  interfaces.py  setup.py  types.py
src/same_search/: __init__.py  batch_processor.py  duplicate_analog_search.py  enhanced_clustering_search.py  hybrid_dbscan_search.py  improved_multi_engine_search.py  multi_engine_search.py  optimized_dbscan_search.py  search_interface.py  searg_processor.py  setup.py  simple_multi_engine_search.py  token_search_engine.py  tree_optimizer.py
src/search_engine/: __init__.py  enhanced_dbscan_search.py  hierarchy_tree_builder.py  tree_generator.py
tests/: conftest.py  test_advanced_model_manager.py  test_advanced_search_methods.py  test_api_endpoints.py  test_api_integration.py  test_api_middleware_security.py  test_backend.py  test_category_classifier.py  test_data_manager.py  test_database.py  test_enhanced_pipeline.py  test_enhanced_semantic_search.py  test_enhanced_text_processing.py  test_excel_import.py  test_export.py  test_file_upload_api.py  test_hybrid_search_integration.py  test_lemmatizer_with_spacy.py  test_model_manager_integration.py  test_notebook_imports.py  test_notebook_lemmatizer_cell.py  test_notebook_modules.py  test_notebook_normalizer_cell.py  test_optimized_search_engines.py  test_optimized_text_processing.py  test_parameter_extraction.py  test_search_engine.py  test_settings.py  test_simple_notebook.py  test_text_processing.py  test_utils.py  test_websocket_endpoints.py
tests/compatibility_tests/: test_backward_compatibility.py  test_migration_validation.py
tests/integration_tests/: __init__.py  test_clear_search_integration.py  test_full_pipeline_integration.py
tests/test_same_api/: __init__.py  test_export.py
tests/test_same_clear/: __init__.py  test_parameter_extraction.py  test_text_processing.py  test_token_processing.py
tests/test_same_core/: __init__.py  test_interfaces.py  test_types.py
tests/test_same_search/: __init__.py  test_search_engine.py
(+108 files in other folders)
