[project]
name = "same"
version = "0.1.0"
description = ""
authors = [
    {name = "igornet0"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "sqlalchemy[asyncio] (>=2.0.41,<3.0.0)",
    "fastapi (>=0.115.14,<0.116.0)",
    "aio-pika (>=9.5.5,<10.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "jose (>=1.0.0,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"